@@ -1,0 +1,33 @@
+#! /bin/sh
+# @configure_input@
+#---------------------------------------------------------------------------#
+# Copyright (C) 1994-1998, 2000-2005 The University of Melbourne.
+# This file may only be copied under the terms of the GNU General
+# Public License - see the file COPYING in the Mercury distribution.
+#---------------------------------------------------------------------------#
+#
+# mercury - Melbourne Mercury Compiler.
+#
+# Use `mercury -h' for help.
+#
+# Environment variables: MERCURY_STDLIB_DIR, MERCURY_CONFIG_DIR,
+# MERCURY_COMPILER, MERCURY_C_COMPILER, MERCURY_DEFAULT_GRADE,
+# MERCURY_DEFAULT_OPT_LEVEL.
+
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+MERCURY_COMPILER=${MERCURY_COMPILER-"@bindir@/mercury_compile"}
+MERCURY_CONFIG_DIR=${MERCURY_CONFIG_DIR-${MERCURY_STDLIB_DIR-'@CONFIG_LIBDIR@'}}
+export MERCURY_COMPILER MERCURY_CONFIG_DIR
+
+# Set the MACOSX_DEPLOYMENT_TARGET environment variable if needed.
+@SET_MACOSX_DEPLOYMENT_TARGET@
+
+case $# in
+	0)
+        @MMC_INVOKE_CMD@ ${MERCURY_COMPILER}
+        ;;
+	*)
+        @MMC_INVOKE_CMD@ ${MERCURY_COMPILER} "$@"
+        ;;
+esac
